<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hello"
            app:layout_column="0"
            app:layout_columnWeight="0"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="0"
            android:onClick="Onclick"/>

        <Button
            android:id="@+id/beautiful"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Beautiful"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="0"
            android:onClick="Onclick"/>

        <Button
            android:id="@+id/excuseme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Excuse_me"
            app:layout_column="0"
            app:layout_columnWeight="0"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:onClick="Onclick"/>

        <Button
            android:id="@+id/hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HI"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1"
            android:onClick="Onclick"/>

        <Button
            android:id="@+id/howmuchisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/How_much_is_it"
            app:layout_column="0"
            app:layout_columnWeight="0"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="2"
            android:onClick="Onclick"/>

        <Button
            android:id="@+id/verygood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Very_good"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="2"
            android:onClick="Onclick"/>

        <Button
            android:id="@+id/thankyou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Thank_you"
            app:layout_column="0"
            app:layout_columnWeight="0"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="3"
            android:onClick="Onclick"/>

        <Button
            android:id="@+id/whereisthebathroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Where_is_the_bathroom"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="3"
            app:layout_rowWeight="3"
            android:onClick="Onclick"/>


    </androidx.gridlayout.widget.GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>